made changes with latest updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
+fastapi
+uvicorn[standard]
+python-dotenv
+
 langchain
-langchain-core
 langchain-community
-langchain-chroma
-
-chromadb
-
 langchain-google-genai
 
-python-dotenv
-protobuf
-fastapi
-uvicorn
+chromadb
+sentence-transformers
+
+pydantic
