--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-fastapi
-uvicorn[standard]
-python-dotenv
+fastapi==0.111.0
+uvicorn[standard]==0.23.2
+python-dotenv==1.0.1
+pydantic==1.10.11
 
-langchain
-langchain-community
-langchain-google-genai
+# LangChain packages
+langchain-core==0.1.0  # core package for RAG and documents
+langchain-huggingface==0.1.3  # embeddings
+langchain-google-genai==0.0.11  # ChatGoogleGenerativeAI
+langchain-community==0.0.57  # vectorstores and loaders
 
-chromadb
-sentence-transformers
+# Pinecone
+pinecone-client==2.2.2
 
-pydantic
+# PDF loader dependencies
+pypdf==6.4.0
+
+# Text embeddings and ML
+sentence-transformers==2.2.2
+torch==2.2.2
+transformers==4.31.0
+
+# Optional utils
+requests==2.31.0
