--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,14 @@
-fastapi==0.111.0
+fastapi==0.111.1
 uvicorn[standard]==0.23.2
 python-dotenv==1.0.1
-pydantic==1.10.11
-
-# LangChain packages
-langchain-core==0.1.0  # core package for RAG and documents
-langchain-huggingface==0.1.3  # embeddings
-langchain-google-genai==0.0.11  # ChatGoogleGenerativeAI
-langchain-community==0.0.57  # vectorstores and loaders
-
-# Pinecone
-pinecone-client==2.2.2
-
-# PDF loader dependencies
+pandas==2.1.1
+numpy==1.26.2
+langchain==0.2.14
+langchain-huggingface==1.1.0
+langchain-chroma==0.0.20
+langchain-google-genai==0.0.23
+chromadb==0.4.5
 pypdf==6.4.0
-
-# Text embeddings and ML
+pinecone-client==2.2.0
 sentence-transformers==2.2.2
-torch==2.2.2
-transformers==4.31.0
-
-# Optional utils
-requests==2.31.0
+torch==2.2.0
