--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-fastapi==0.111.1
-uvicorn[standard]==0.23.2
-python-dotenv==1.0.1
-pandas==2.1.1
-numpy==1.26.2
-langchain==0.2.14
-langchain-huggingface==1.1.0
-langchain-chroma==0.0.20
-langchain-google-genai==0.0.23
-chromadb==0.4.5
-pypdf==6.4.0
-pinecone-client==2.2.0
-sentence-transformers==2.2.2
-torch==2.2.0
+fastapi
+uvicorn[standard]
+python-dotenv
+pandas
+numpy
+pypdf
+langchain
+langchain-huggingface
+langchain-google-genai
+chromadb
+pinecone-client
+sentence-transformers
+torch
