made changes in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 fastapi
 uvicorn
 python-dotenv
-pinecone
+pinecone-
 langchain-core
-langchain-community
-huggingface_hub
+langchain-text-splitters
+langchain-google-genai
+huggingface-hub
+pdfplumber
+numpy
+pydantic
